# python_labs

./: .coverage  README.md  pyproject.toml
data/lab04/: input.txt
data/lab08/: students_input.json
data/lab09/: students.csv
data/samples/: cities.csv  people.csv  people.json  test_cat.txt  test_stats.txt
past_labs/lab01/: 02_sum_avg.py  05_initials_and_len.py  06exe.py  07exe.py
past_labs/lab02/: matrix.py
past_labs/lab04/: text_report.py
past_labs/lab05/: json_csv.py
past_labs/lab06/: cli_text.py
past_labs/lab07/: README.md
past_labs/lab08/: serialize.py
past_labs/lab10/: __init__.py  benchmarks.py  linked_list.py  structures.py
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06exe.py  07exe.py  demo.py  model.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: README.md  text.py  text_stats.py
src/lab04/: io_txt_csv.py  text_report.py
src/lab05/: csv_xlsx.py  csv_xlsx.py   json_csv.py
src/lab06/: cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py
src/lab09/: __init__.py  group.py
src/lab10/: README.md  benchmarks.py  demo_linked_list.py  demo_structures.py  linked_list.py  structures.py
src/lib/: text.py
src/python_labs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_json_csv.py  test_text.py
